2010-02-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-item-editing.js
	(openEventDialog): we must check the ACL of an event even when
	isCalendarWritable returns false, since modification of an event
	can still be granted even though the calendar is read-only to the
	current user. Reimplemented the old versoin of isCalendarWritable,
	without the ACL code, with the name "isCalendarAvailable" for that
	purpose.

	* src/calendar/base/content/calendar-summary-dialog.js (onLoad):
	we must test whether the entry ACL has been filled before invoking
	its accessors. This situation can happen when the acl manager has
	never been invoked, for a read-only calendar.
	(onAccept): we now check whether the instance being editted is an
	event before saving delegation information. This solves a bug
	where summary dialog fails to close when displaying a task.

2010-01-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-item-editing.js
	(openEventDialog): enable the fetching of ACL on events when the
	parent calendar IS writable. Furthermore, the fact that a calendar
	is writable should not preclude the code from checking the
	modification write when choosing the window to display.

2009-12-01  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Reworked the "Meeting" category for the
	English and French locale.

2009-11-26  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Added src/patches/468846_oracle.diff - which
	was missing in previous commits
	* src/calendar/providers/storage/calStorageCalendar.js
	Modified initDB() to create indexes as mentioned in
	https://bugzilla.mozilla.org/show_bug.cgi?id=529326
	This speeds up initial loading of cached CalDAV
	calendars and subsequent TB starts.
	* Bumped version number to 0.9.8pre1

2009-10-27  Ludovic Marcotte <lmarcotte@inverse.ca>

        * Added checks in case start/end date isn't defined so
	we do not throw worthless exceptions and stop.
