@@ -274,6 +274,7 @@ function openEventDialog(calendarItem, calendar, mode, callback, job) {
     // Set up some defaults
     mode = mode || "new";
     var compAclEntry = null;
+    var hasAclManager = false;
 
     try {
         var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
@@ -287,6 +288,7 @@ function openEventDialog(calendarItem, calendar, mode, callback, job) {
                 return;
             }
         }
+        hasAclManager = true;
     }
     catch(e) {}
 
@@ -354,9 +356,9 @@ function openEventDialog(calendarItem, calendar, mode, callback, job) {
     if (isCalendarAvailable(calendar)
         && isCalendarWritable(calendar)
         && (mode == "new"
-            || (mode == "modify"
-                && !isInvitation
-                && (compAclEntry && compAclEntry.userCanModify())))) {
+            || (mode == "modify" && !isInvitation
+                && (!hasAclManager
+                    || (compAclEntry && compAclEntry.userCanModify()))))) {
         url = "chrome://calendar/content/sun-calendar-event-dialog.xul";
     } else {
         url = "chrome://calendar/content/calendar-summary-dialog.xul";
